syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.distledgerserver;

import "DistLedgerCommonDefinitions.proto";

// Cross-server interface of the DistLedger Service (only for phases 2 & 3 of the project)

message GetStateRequest {}

message GetStateResponse {
  bool isActivated = 1;
}

message PropagateStateRequest {
  LedgerState state = 1;
  VectorClock replicaTS = 2;
}

message PropagateStateResponse {}

service DistLedgerCrossServerService {
  rpc propagateState(PropagateStateRequest) returns (PropagateStateResponse);
  rpc getState(GetStateRequest) returns (GetStateResponse);
}
