syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

import "DistLedgerCommonDefinitions.proto";


message RegisterRequest {
  string service = 1;
  string qualifier = 2;
  string host = 3;
  int32  port = 4;
}

message RegisterResponse {}


message LookupRequest {
  string service = 1;
  string qualifier = 2;
}

message LookupResponse {
  repeated ProtoServer serverList = 1;
}


message DeleteRequest {
  string service = 1;
  string host = 2;
  int32 port = 3;
}

message DeleteResponse {

}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}